<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search_menu_item"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1" />

    <item
        android:id="@+id/notifications"
        android:title="@string/notifications_menu_item"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:orderInCategory="2" />

    <item
        android:id="@+id/profile"
        android:title="@string/profile_menu_item"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person"
        android:orderInCategory="3" />

    <item
        android:id="@+id/messageChat"
        android:title="@string/chat_menu_item"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_chat_white_24dp"
        android:orderInCategory="4" />
</menu>

